kubernetes/cms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cmsangular
spec:
  selector:
    app: cms-angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083  # Must match the container port of Service A
