kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cmsangular-serviceLB
spec:
  type: LoadBalancer
  selector:
    app: cms-angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
