kubernetes/spotify-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spotify
spec:
  selector:
    app: spotify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081  # Must match the container port of Service A
